--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
-beautifulsoup4
-send2trash
-pyaudio
-requests
-decorator
-markdown
-jsonschema
-psutil; sys_platform == "win32"
-distro; sys_platform != "win32" and sys_platform != "darwin"
+attrs==20.3.0
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==4.0.0
+decorator==5.0.5
+idna==2.10
+jsonschema==3.2.0
+Markdown==3.3.4
+mock==4.0.3
+nose==1.3.7
+PyAudio==0.2.11
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.8.1
+PyQtWebEngine==5.15.4
+PyQtWebEngine-Qt5==5.15.2
+pyrsistent==0.17.3
+requests==2.25.1
+Send2Trash==1.5.0
+six==1.15.0
+soupsieve==2.2.1
+urllib3==1.26.4
